; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/rtl/extr_actctx.c_parse_trust_info_elem.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/rtl/extr_actctx.c_parse_trust_info_elem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.assembly = type { i32 }
%struct.actctx_loader = type { i32 }

@TRUE = common dso_local global i64 0, align 8
@trustInfoW = common dso_local global i32 0, align 4
@asmv2W = common dso_local global i32 0, align 4
@securityW = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"unknown elem %wZ\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, %struct.assembly*, %struct.actctx_loader*)* @parse_trust_info_elem to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @parse_trust_info_elem(i32* %0, %struct.assembly* %1, %struct.actctx_loader* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.assembly*, align 8
  %6 = alloca %struct.actctx_loader*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store %struct.assembly* %1, %struct.assembly** %5, align 8
  store %struct.actctx_loader* %2, %struct.actctx_loader** %6, align 8
  %10 = load i64, i64* @TRUE, align 8
  store i64 %10, i64* %8, align 8
  br label %11

11:                                               ; preds = %44, %3
  %12 = load i64, i64* %8, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %11
  %15 = load i32*, i32** %4, align 8
  %16 = call i64 @next_xml_elem(i32* %15, i32* %7)
  store i64 %16, i64* %8, align 8
  %17 = icmp ne i64 %16, 0
  br label %18

18:                                               ; preds = %14, %11
  %19 = phi i1 [ false, %11 ], [ %17, %14 ]
  br i1 %19, label %20, label %45

20:                                               ; preds = %18
  %21 = load i32, i32* @trustInfoW, align 4
  %22 = load i32, i32* @asmv2W, align 4
  %23 = call i64 @xml_elem_cmp_end(i32* %7, i32 %21, i32 %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %28

25:                                               ; preds = %20
  %26 = load i32*, i32** %4, align 8
  %27 = call i64 @parse_end_element(i32* %26)
  store i64 %27, i64* %8, align 8
  br label %45

28:                                               ; preds = %20
  %29 = load i32, i32* @securityW, align 4
  %30 = load i32, i32* @asmv2W, align 4
  %31 = call i64 @xml_elem_cmp(i32* %7, i32 %29, i32 %30)
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %38

33:                                               ; preds = %28
  %34 = load i32*, i32** %4, align 8
  %35 = load %struct.assembly*, %struct.assembly** %5, align 8
  %36 = load %struct.actctx_loader*, %struct.actctx_loader** %6, align 8
  %37 = call i64 @parse_security_elem(i32* %34, %struct.assembly* %35, %struct.actctx_loader* %36)
  store i64 %37, i64* %8, align 8
  br label %43

38:                                               ; preds = %28
  %39 = call i32 @xmlstr2unicode(i32* %7)
  store i32 %39, i32* %9, align 4
  %40 = call i32 @DPRINT1(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i32* %9)
  %41 = load i32*, i32** %4, align 8
  %42 = call i64 @parse_unknown_elem(i32* %41, i32* %7)
  store i64 %42, i64* %8, align 8
  br label %43

43:                                               ; preds = %38, %33
  br label %44

44:                                               ; preds = %43
  br label %11

45:                                               ; preds = %25, %18
  %46 = load i64, i64* %8, align 8
  ret i64 %46
}

declare dso_local i64 @next_xml_elem(i32*, i32*) #1

declare dso_local i64 @xml_elem_cmp_end(i32*, i32, i32) #1

declare dso_local i64 @parse_end_element(i32*) #1

declare dso_local i64 @xml_elem_cmp(i32*, i32, i32) #1

declare dso_local i64 @parse_security_elem(i32*, %struct.assembly*, %struct.actctx_loader*) #1

declare dso_local i32 @xmlstr2unicode(i32*) #1

declare dso_local i32 @DPRINT1(i8*, i32*) #1

declare dso_local i64 @parse_unknown_elem(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
